--- a/kubernetes/flux/repositories/helm/longhorn.yaml
+++ b/kubernetes/flux/repositories/helm/longhorn.yaml
@@ -5,6 +5,6 @@ metadata:
   name: longhorn
   namespace: flux-system
 spec:
-  interval: 1hr
+  interval: 1h
   #url: https://charts.longhorn.io
   url: https://marcomihaicondrache.github.io/longhorn-chart/
