--- a/kubernetes/flux/repositories/helm/vmware-tanzu.yaml
+++ b/kubernetes/flux/repositories/helm/vmware-tanzu.yaml
@@ -5,5 +5,5 @@ metadata:
   name: vmware-tanzu
   namespace: flux-system
 spec:
-  interval: 1hr
+  interval: 1h
   url: https://vmware-tanzu.github.io/helm-charts
