fixing timeout and taint

--- a/ansible/inventory/group_vars/master/k3s.yml
+++ b/ansible/inventory/group_vars/master/k3s.yml
@@ -10,6 +10,8 @@ k3s_server:
   node-ip: "{{ ansible_host }}"
   tls-san:
     - "{{ ansible_host }}"
+  node-taint:
+    - "node-role.kubernetes.io/master=true:NoSchedule"
   # Disable Docker - this will use the default containerd CRI
   docker: false
   flannel-backend: "none" # This needs to be in quotes
