--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:Yr0eHclS,iv:f8rLwJ03AgEiuWRbj3Ef7XmkFOfTk33EseLvih/oNjo=,tag:9y5WzMXmL1JxLKRCPJnBxg==,type:str]
-ansible_user: ENC[AES256_GCM,data:Y/4zRA==,iv:GvNUBtBHru1qO3Ycm2bRxyyc/McImYUwTXYNF7gR0DU=,tag:kwik3UYWemkgdeFVBMD2BA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:vghh6DIz,iv:D/HBMFn2hdzARIt3Fq7MtJQoDRi+2U0Ie9F0DU16rCc=,tag:oofIfQrNhE7MUOVGlqBA8w==,type:str]
+kind: ENC[AES256_GCM,data:/O+fnwhe,iv:WSqSlS8KQItJae5oXi8kiRURKi8JSlNZIlH0O7bFVMM=,tag:zpuA704BWVqI6vGG+EUMuQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:DDNISw==,iv:rxswMw4IOfvg9F451DluJkJGKbQ1R3JaPE/JYuI458A=,tag:KOCyfBFKxCfVFA8ofgK4DA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:DW3FBvRd,iv:hnmQkTRX2RWyxuU6mHo8SDblpKf7QuUObMa2iJp6HgY=,tag:U9+dCFkYjN7XkUHt5GC29Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaZlR4QzFpNVpBbk56RlRF
-            dERWMzgvUmxTK0V5Y2VPTmFWb2lWd0l0dVhBClBXdGF4dEpnM1R5U2cxQzlkYThH
-            bVBOa0lZRVNCbHc3ZTRTcWJjM25GY2cKLS0tIEZaOUsxTzVYb0Exc1kvMUQ0U3or
-            OHEwZUovOXN3SFVMeUJxNFFJQms4YnMKGaigu4NmEa5WgvDD8gRq/RiPK8JyU8r9
-            GJMjCzt3naRSSOFVlIwZZhZLXTCFyJipQU/w1HkS/kc0s1sQiBfJgg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5SFZURjkwaklRU3N5ZUlo
+            ZUJXb2k1a2x5c1JJKy82blRsVGhTRXN1UHhVCnZ0aUpGYXN2cXR0M1luTDNNT3gv
+            QmtqMTQ5THpKWGpoT2lBY2ZNajNDTVEKLS0tIG4xRlhJa0xxUUU2aElmcERzelJD
+            SVk5djRmbzhmVUJqQThmRFdnOUY0RFUKGQGeb/wFJxj1hdSTvq50U6AoHjgzKxLa
+            Xlyy/1fSTfRBtAQ10qpdlPxp7hclU6Gn6qRq5rAVzNqAhtTWRD6l1Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T09:56:00Z"
-    mac: ENC[AES256_GCM,data:DC3iI9vq23olizWbMYPCOi8lJeWQooRlBrillMXQnIdXoeU2MBLzLidw2cqbDTcNL9K3Jt1PR2qoWcmEXg1kK9oVAOAiVhOmOlJJ2+a2k8nR+q+rVJzGZZ/CLy5fxUJAxCwKSZD/uxcRnQiDDvtNTZd+0+KVDuZQMEAFDj8AXHY=,iv:Y5y/t79C3ad40q/RKqk+hCvij+vl9IIcuXSMnM+nxtg=,tag:AQCpnWV+dxLeaNmMShiCHA==,type:str]
+    lastmodified: "2022-12-24T11:21:51Z"
+    mac: ENC[AES256_GCM,data:fuDbx8WGIUsCvM4gOlorCPj0Srel+iKY0buVh8CNGyjrDkd3THhCT02teDQk9/dia9AmLf94kKZiEqZGcjB/K8Ft/1H93bNQr14jOLPVswkw01hkIWXjlZrC/dK1H0F6oqtMxbXK5+BAJaFTnzmTSZVe/TjwV7c4ZCvT3TtP9p8=,iv:zIcBpXGeaR2WUjc02HvQrj+aTcMQd+FrsJaEJQY8BCA=,tag:9OnZtkiquqUchwjooX/8vQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
