--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:V7WRVNDr,iv:aGutXAhVj4wc+0MQrby7Fq2ZwhFC0KJyU1jhOs+1NeE=,tag:TqN+hgQ3TVKMZ8g0AY6Q+Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:8BvmkA==,iv:t50b5+OCDwkpPYB29gEw1X7WswsEp7QcRjKaO7/fsSI=,tag:w295r12HhEgcMk1LS0GsvQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:+rvIX1ymSEo=,iv:Uyk0/kRMA8mBpoF7VHLWlMLxM0yjqwBu0BaMC6Ft+sw=,tag:U2QCnWnnMeSSKIE6QjuDMw==,type:str]
+kind: ENC[AES256_GCM,data:6WlWW3zu,iv:TTokg5ZQfYjQ34b7GeJKVqXgWivXn/AaRZsZ91p/6ro=,tag:LajqHT9w8sxvksGEQ55SxQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:cjap5g==,iv:kTMFipAvwzL9+FEsafvws+dqKCtwL0d8zu6hOa2uc9Y=,tag:IpAl/32q9DQrYJ/4fNVwkw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:bSzuPeC4Grs=,iv:xxmIMIjlGaUkZijM86tQvq5LV/6iMsA+KSGkWgFD84c=,tag:3DNPgc21140rEnc7mEL6gw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2TVhMLy9XZGExYzU4Vjdi
-            bm5UNjQ1QmFwWEFaL2tuK1JnNmZzVFhmSXpBCjZXM3dkdW5USkdTRlhjcEVpZkxx
-            MnQ4dlFJTVRyOTFyc0UxYWlma2lRR2MKLS0tIGZBaWZ0eGxsYlJWUyt0cWZ1aEM2
-            OXJqYVA3WS93dGQwSTB6UkZkL0N4eGsKkrGLZbVT9BSjg0jEtZsCaDfoKg8JBTiN
-            7sSxMKV6aI7b7uy8MGM22QDxyHffR1atXH+v0GTbxmkqoK/8zH889A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlOHcyR3NNcnQ1YStIM3A1
+            YzVOYTJpMUxTQ2dJZk1SSlE1MmdnbktBcWg0CnBKWEM0eUlWUzJKQzVUclRDUjVO
+            NDJjaWhuT3NxOElBRWxsaEpPcFNHeWsKLS0tIEhabkhkeDgram5MbHh4dXRhT1o4
+            dXF2YTdWUTVQcXRRdkpRd1JWcm1JOG8KtCHZLwCsA59xcgdwU3jn7fGpLMzysqbh
+            LmkvgIyD/G3dTWOaT/mJsdka2mtCiZLiZqakCAjyPmlX6u4O4K6EOg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T09:56:00Z"
-    mac: ENC[AES256_GCM,data:9H7miceUtASS9CshzzqQeTV3AKfBmHRrEF6YyyhAlNAkXCIrvbsER9swe7ezBPzTvNCUisi786TI3NF2o9bOn6Yn6RmeTA7EmAiGgibLnZC9pmmcAkw3ROTOB0q4V9+3f5ORlalxbEmjfHGggA6LHq1BOdl7QwkP8oLhdfabBo4=,iv:7d35nsucyiRKYDvRY1/F9hUcg+/KGGQED0u+xSJ2NHo=,tag:N+AgQtkn62erXCltoBKjGg==,type:str]
+    lastmodified: "2022-12-24T11:21:51Z"
+    mac: ENC[AES256_GCM,data:TAT2w4QOimrprmVvd7Kkw5Oa5SS23SsPFNbu4tGsyESIV9OlCh04M+nSN7Mzn0NEySWgw0pdPdYweEZ1xNg10ketN0c4hU9fPeIgkQCbqK7Vkj5hn/Y1wP5NSQsfSh0OfJ8aUg5NeBeKx5MKMf3e3AxOn1BPW0qvuDeEcepEx2Q=,iv:jJNNEHAEwaJY85wMsOWUmMgl5t/vjmlHFKehqoLlRQo=,tag:JoDKmGyguai4UwEbiSBKtA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
