--- a/kubernetes/apps/home/emqx/app/secret.sops.yaml
+++ b/kubernetes/apps/home/emqx/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: home
 type: Opaque
 stringData:
-    dashboard_user: ENC[AES256_GCM,data:6ADKkYE=,iv:hUqRRYyd5mtwM8qF1O8qg+MyjcEE+EVB1fyrTypXW7g=,tag:/hAU2KCQdecwf663PFiUaw==,type:str]
-    dashboard_password: ENC[AES256_GCM,data:tGcCrPdTnFDu,iv:Wp9iQPk9xfQCnDkL9EdsHgcH+9UgpBncalweUJQqnMc=,tag:sYblHTnjrimF4mJCfHSmaQ==,type:str]
+    dashboard_user: ENC[AES256_GCM,data:McoCFUY=,iv:tLJBIbz3SUlE6pUeSVQabkCVuubBhfqXpVIRdz/jWso=,tag:jn3KnOnP2lKmO+wVqIAKCw==,type:str]
+    dashboard_password: ENC[AES256_GCM,data:B6yVPO2RWuzD,iv:T5usdEojikP7TFzDGwP3ODsdlCkFBPaBFMNVJk299/w=,tag:dODarPZ9rQILmfpuQXVdtA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHRjF3aUZCN245T2NNUE1H
-            N2VXUDk0SFZwNXFubmhYdVBuaE1LNmFRT1NRClNQNkdSSHIrdVVIYjk5Ky9HS3lp
-            N1JNRjE4YVFWV3Z1dVhQNzgzUklBcjQKLS0tIG1lcjlUY0U0Qzc2aDBiVVk0ZG8r
-            YkkvTHQrVjYzWDdzRWhObzlINDJsTUkKJMZIqD9NDzBAqtZRHqV8GRF3Gc047vNn
-            vwzSxxPzJSXiQwGP6hdTITv3fNShdD9zINF9RRkMHhGbXauZ7v2M7w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwRUlGTE1vTWVrOEdFQlU0
+            YW9mZ3pLY0UvemJmTjR4ZVZjM1JiNGQwM0hNClRoM3pxSlpJRWlQNWgzNHB1SUJN
+            dE1MR2FzeThTMUlVNStPL1IwYW1yWHMKLS0tIGY0eVdoVTBDY2lINlJaR1lDREVB
+            NHRvR1BZRUtmNnJPTUxKd2lQNEEwUjQKEA1bmYDCeOavWLD1m1iFmBSQi7D9n7I5
+            MkgYZ5R5jyFVYxOANillgo71FygQ/5Cjv5r03PqXXifR0fmdems8QQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T09:56:00Z"
-    mac: ENC[AES256_GCM,data:AOo4tGZ5hjwx5y82iD78ZhLaHY1pkwlPZzRml0a+nqlnU4s5bc5V9J+JvTf2FCqRSRkgEHYCglEEf6jFslGT5SLg7waKPDcKTVvDTKKDKstr2/AsyG9af5OoUH6cWy6A7MuvvTCEDMwEsjXMI9ufGCkokg5jhEr6mlHQEk/WOVE=,iv:FNib5MX6zS/mhO4byc2HlwjdEBHYt2LQ8JVa8p6y8gs=,tag:vmwS06DxYiWrFdy+e8/pdg==,type:str]
+    lastmodified: "2022-12-24T11:21:51Z"
+    mac: ENC[AES256_GCM,data:eGg7rdsBqSTMKdGbyreioOUGAWhBf/CzH5FBBWLKRvA9MNUcoRwXPqwvtgyslAbX3NpNKudcmH8MFuK8PR+entIs/4R1wmjnYT52u7Yp5HWkVYgwFvfWx9qmIJIhyKxl3KEnJUvZGyQzZmJYiV1PJIOQsD2wXoGB/cvuRfWbDXk=,iv:B7N5dg2g1tqGWnLY94v8QjR1WuM87Yx1ryK10+6EyaM=,tag:mFUw+iu1Ai/bFgvpoVK+8w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
