--- a/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
+++ b/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: home
 type: Opaque
 stringData:
-    ZIGBEE2MQTT_CONFIG_MQTT_USER: ENC[AES256_GCM,data:CSzRq8EI9mnNEIc=,iv:o27G1eTGGT+ehDUWFmdC4PGi1eJLjDUvEOvU4UsGL3g=,tag:3BQAheXMsemmkB3MeKjWyg==,type:str]
-    ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD: ENC[AES256_GCM,data:k4VXlIR0s3Dj,iv:EJVFiMwOaeSXIIVktIucEdky2eOO0ZURncM+RhhstDs=,tag:MEXFP56dKu2xy75+7HRX1Q==,type:str]
+    ZIGBEE2MQTT_CONFIG_MQTT_USER: ENC[AES256_GCM,data:Qrwc3LyJzkkKv64=,iv:SR+IK+ztzH8KCjzlWKrKgJGBSy7ftetrC4CY+lYPXms=,tag:9QTwH3+iS4AwA67ikKUCVA==,type:str]
+    ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD: ENC[AES256_GCM,data:S0/6y6ty7FtM,iv:u/spNXzMmClm8AsI5YsKBhZ79cPekMTxmZLqNhX2aZU=,tag:/tQTdxX13G2kLgLJggazSg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2cWkydWRhSEpScTVhSXFs
-            L2s1U2FwUm1GTE5KRTVxSXFhZzZqaklxQmlFCmtFWk5HWWg1UFpRR2dXM0JPYlpP
-            b2xjZWVyM1NKT1Fia1lPSU9Zd1dhcjAKLS0tIGJlNDJVbEFvUGdrUzRrdWxEUll6
-            VVpzcTNqREZWRmJUcWU4VFVXMFpjUG8KcnM1PSxgCXeiKZYpENLkXyWV5Hx7SPW9
-            DBnMp/RnISqisZwc7pU6VThW10onlH//udxKE6qAPVkGpfKS9+6xAQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvUnp2ckM1bE5jcFpuZ1E5
+            VHFPa0RZT0sxSm13dmJvU21ielR1NWoxc2pvCjRhOWpnaDlhdG1kbk1oWGU3OE5W
+            TU12NU54Lzh3SEw2SlR1VmozaFNVQlUKLS0tIGF2Y0lIRnZkYUJHNnZPSXhOZVpW
+            MVJyTE14S2N1ZXQzRzR3NDN3SFpONmMKiiowzaLEZ+0ZHjVdodcevnfjXRJJn4m0
+            rW729dtDAsFiseQ+m6c1MKNR47D+0gVGgpAneZv9hkBFQHBbxC5N5A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T09:56:00Z"
-    mac: ENC[AES256_GCM,data:8UlFA+C9Zt70RcC9mcEWq9dtIkiQkMWRRSwMc/gWG5HL0Ybx59T7TNEDB9a+qZaV95gptkKYw97wbqBdNIZl5HsVr7gaoOYgWOxUgI9hbhW/433me4NwrdNx9hPlReKuFoKUyhH27mpIo1rB3fTzRpt8+6lWf54EgqsZbmQrV5A=,iv:5eFt3PRgLdGmp39TO+/VkWjz5bv8wge06sb5CryAHUE=,tag:BfIU/QJ3U1ztw0K7USXPTw==,type:str]
+    lastmodified: "2022-12-24T11:21:51Z"
+    mac: ENC[AES256_GCM,data:7uWDzhEVIT/WOOX5arEyAsFtOG72npkszyAdHzWeyseoK0qgAvufiVvY4wEEMCfuNALvBjVB6/u/5mbwhrrVjff9UEWk1et/a+u+nt3hzdu8O/gKMBECqgu60a+DgYdbzGw8MtHJGwW4sHiYntHiW3WyWgOAeA2WQMq2NmxQWAI=,iv:pbgWpqTCqKle4oBTAWI2ONs+bWiL6g2+6GS1zmhjX+E=,tag:26Fc7gGzi+QPWcv7nWyYWA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
