--- a/kubernetes/apps/longhorn-system/longhorn/app/secret.sops.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/secret.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: longhorn-backup-secrets
     namespace: longhorn-system
 stringData:
-    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:E25mDwadwrvNykOUVl+vYrfpMLE=,iv:og4f9sLr7mWwFAnMWVjPSPNLszNJ7JMLfrqjsfUMVAo=,tag:mMQihuEIfYo8i5buLaZowQ==,type:str]
-    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:/UB8i5miH0Uz5FsqvPu84oHU52e88wQ5xL1nLA5/8KHOzsTrFudeOETdmw==,iv:b2YlS0DsbhCUbeTNgAxzRKjmdTglsB7JXYKDzxWaJUk=,tag:D+It2AQBiGuTPq++4CF7/Q==,type:str]
-    AWS_ENDPOINTS: ENC[AES256_GCM,data:P7F7tcMOwzZWu+O44tOdfc2mqoeap5lCk/zj0mzPX0+zjeE=,iv:Jdu3/NaLWeW2XdPlM+O5tG8C//xmf57nWqyPUgWTaFQ=,tag:i2pNi+tdZFqdWMoyF91iWg==,type:str]
-    AWS_REGION: ENC[AES256_GCM,data:6uwBiA==,iv:8fR6PmySGXKnCkQR6eUHVZyYWMwOgrnIlPURcw6+pFI=,tag:RS1mGA/1IzFaACF4J32taA==,type:str]
+    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:9hugWL+5JQ9XX/T7tJB9BIvROxA=,iv:VxiipVLKU22Am+6dN4EQXe+y4LZESBnvLGRVeh1LmYU=,tag:NBWR4ZzlYxO5ci6IxFh5Xg==,type:str]
+    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:blNtO1GhpN8XcHzGjsSWCbE7HfwvDWfjroFBImdM/2mc+H080Wwma5Tgdg==,iv:YZ7CRplimk5LgWb3RzRow0JNTdaIR/XqZGnRdQUNETo=,tag:2QZS2QeE06zmMd1/B12Pqg==,type:str]
+    AWS_ENDPOINTS: ENC[AES256_GCM,data:lXLg1hk6AGisnV4E8sY1gipvA5PuA3w9fGb3AHW1aOhxXYE=,iv:lRe+Fm6/j23cjgL742ci1i9bJExi4UmbbOgebDmE0b4=,tag:ZMPwQ0u3B0LfCk6kifCV2w==,type:str]
+    AWS_REGION: ENC[AES256_GCM,data:cvjvFw==,iv:63jSf0asWHE+4WWMJjiaZJeVs1h37+XUe+SJC1+pV2U=,tag:dYxvgDCJr3vniDr1zEDOQg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6bnZqRmd2ejg5dTEybUhj
-            TWRPNFdUYS8rUjhlSmdiUGJHOVQ1cUg5N0MwClpLUWtPS2JNaTBLaFpXTXRLTWdy
-            Y2xubWN1MDlmV0RQWkFxUk96QVBpb3MKLS0tIGdCVW1DSlhqM2pIaWNHa3Vqd29J
-            VzBvb3d4bnJxdUhQRXBMcTR4b3NscnMKc029Qdy/nSzFekpbBGXAvhz712eTWHOw
-            rUYJz9pV6RSU7UquQ3xmFZw1DofAXvn1vfws+tfTIbjjNtZikg2UZQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHYkxZTlBpRTRuMXdJaVJi
+            RmdrMGRLQmx3aHFsd1NtNXlDbG5YQXlBUUEwCmEyeU1vV1F2ak56clJ2dlZzVEdB
+            ajlDSjQ2UEY4V1NTQUUxaXVIaWxaSVkKLS0tIGpsNzhRditBbkl6L1VBNFQxOTVa
+            bWd1K3AyNFhuSlhBUG1aeGlySmFxaEUKb3EE6P8pkGELvqSDMd+SKMI1PnvwJ7dU
+            2H+aLJ3I59eBn20bqviGGA8cYz3VRi4zZaiLXoUswkakF1O8EQ2/RQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T09:56:00Z"
-    mac: ENC[AES256_GCM,data:p57vo7nhFbMDf8iIuRKdsK4ZZCanVOBsbb1ED2lrtXGitj82sfu+5FpMbEzr0MPodREnYcqPX0dXl3TImvR0l8U5WClv7D1SOlRuySDNSuExI91rkq+fOpE0CFkHE70MUvd+cY8SHD8g9J7NuhVXZkhrSOQ6fnm3xBYN4EKlgPo=,iv:+kG6lQVk7xJ1XN1IBY+GWjftClLZm7Bage0qpd/ufTc=,tag:xyriZ/OiIXNnjPq6zp08uw==,type:str]
+    lastmodified: "2022-12-24T11:21:51Z"
+    mac: ENC[AES256_GCM,data:rqsV8vHR1fQLRBPoO9bZQ6qu0MA1v4VrMYG3qE2oXCCeiNxNBFfsEJuSAyKAZIZxGu64WIoTkhGx4L0a5CupTJzpKZhYLElrKhJp5nQXkxOpsqe54PUWw2cE5vYPJVCAFl0BQQ5M3kURngPzav8EjorAEXKgOPjYpPUkmly9mbk=,iv:tJWvJ3UhgiD/gwT0wALUXXw/sgwK1fOJF6APyOIeU0Y=,tag:2bA+VD2DlnKl08F2lJOaAw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
