switching to emqx operator

--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:6WlWW3zu,iv:TTokg5ZQfYjQ34b7GeJKVqXgWivXn/AaRZsZ91p/6ro=,tag:LajqHT9w8sxvksGEQ55SxQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:cjap5g==,iv:kTMFipAvwzL9+FEsafvws+dqKCtwL0d8zu6hOa2uc9Y=,tag:IpAl/32q9DQrYJ/4fNVwkw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:bSzuPeC4Grs=,iv:xxmIMIjlGaUkZijM86tQvq5LV/6iMsA+KSGkWgFD84c=,tag:3DNPgc21140rEnc7mEL6gw==,type:str]
+kind: ENC[AES256_GCM,data:sD1a5oqQ,iv:bXwY9PNTFKlFg68m5612o8YrFpnx+Ug9M+aFdU3nf8o=,tag:ft/+xMZuWIC9rB8kQ85j1A==,type:str]
+ansible_user: ENC[AES256_GCM,data:A5KF3w==,iv:Og85pb5FfpfAa491jsivpNjmh000Li6vntJ2UcROhLc=,tag:ZYLUU3JRt0/Mixa6cOxx5g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:cQhxq1FouIw=,iv:g5rqRsbs7U4DX8yQ92Rnad2svWeOf332rAsFu849oXQ=,tag:ocUBx7jDBHKLq7hf9y1ULQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlOHcyR3NNcnQ1YStIM3A1
-            YzVOYTJpMUxTQ2dJZk1SSlE1MmdnbktBcWg0CnBKWEM0eUlWUzJKQzVUclRDUjVO
-            NDJjaWhuT3NxOElBRWxsaEpPcFNHeWsKLS0tIEhabkhkeDgram5MbHh4dXRhT1o4
-            dXF2YTdWUTVQcXRRdkpRd1JWcm1JOG8KtCHZLwCsA59xcgdwU3jn7fGpLMzysqbh
-            LmkvgIyD/G3dTWOaT/mJsdka2mtCiZLiZqakCAjyPmlX6u4O4K6EOg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUZ2h0TFRUZ0NFMk1uMXRQ
+            dnRyQlZBaWZqVEFMTFA3Z0dSSFNCMFJXbjBVCnhqSzI2eG9nMWN1NDFFbTgzR2hJ
+            OThZMWtzR1k1a0ZNT0I3Ni9ReE0yNlkKLS0tIFNnRFVVdzlSb0JEb2VpT2ZDTnRW
+            dWZwcHFlOE5rUTdJOVMvZFNOMTExNkkKJ2yDLDFIgvuk56Gg45Js459Gdt4HxLUD
+            j52JpUWhP0S4UlLTq0Eo/8qqa+G4pf4WpJnC2R5of/6xjrVjLOUR8g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T11:21:51Z"
-    mac: ENC[AES256_GCM,data:TAT2w4QOimrprmVvd7Kkw5Oa5SS23SsPFNbu4tGsyESIV9OlCh04M+nSN7Mzn0NEySWgw0pdPdYweEZ1xNg10ketN0c4hU9fPeIgkQCbqK7Vkj5hn/Y1wP5NSQsfSh0OfJ8aUg5NeBeKx5MKMf3e3AxOn1BPW0qvuDeEcepEx2Q=,iv:jJNNEHAEwaJY85wMsOWUmMgl5t/vjmlHFKehqoLlRQo=,tag:JoDKmGyguai4UwEbiSBKtA==,type:str]
+    lastmodified: "2022-12-24T12:32:48Z"
+    mac: ENC[AES256_GCM,data:bsmbenWUjf5QakgfRI9toqZENZSHmC7lc6g0zh1FYyMgHOpopEMU1JsfMQ0dUfmwxFtyFWFgLsLeHmcEABtqZzT7aFK62RtlZhpiQHpHimHQ0NX1Lb/a2918iu64eNxnIuKGot8GKcq26p0xlBpx/0zanI6gmXjZ95pIpFcgtfI=,iv:LJPqdr4y05NUKezRYyI9nWPl6FlLR+1XumkbfVlq5lk=,tag:NFQIrCyGOdPtEMv/8AIADA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
