--- a/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
+++ b/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: home
 type: Opaque
 stringData:
-    ZIGBEE2MQTT_CONFIG_MQTT_USER: ENC[AES256_GCM,data:Qrwc3LyJzkkKv64=,iv:SR+IK+ztzH8KCjzlWKrKgJGBSy7ftetrC4CY+lYPXms=,tag:9QTwH3+iS4AwA67ikKUCVA==,type:str]
-    ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD: ENC[AES256_GCM,data:S0/6y6ty7FtM,iv:u/spNXzMmClm8AsI5YsKBhZ79cPekMTxmZLqNhX2aZU=,tag:/tQTdxX13G2kLgLJggazSg==,type:str]
+    ZIGBEE2MQTT_CONFIG_MQTT_USER: ENC[AES256_GCM,data:0zsvMQmIY8E/1ag=,iv:tdfyDutUlngH6p6qAKEOk0kCOsqdkOFXJLKaH/qsshw=,tag:pftz0tQKJotUxInPuZqqNA==,type:str]
+    ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD: ENC[AES256_GCM,data:+GY8jxdWd8CR,iv:gJ4kmxwM8k2JjIgOchy1vcY351JhltNSL/0R4fdBGZM=,tag:UiQ+ZZIYLsHMQEI+Wv7Sug==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvUnp2ckM1bE5jcFpuZ1E5
-            VHFPa0RZT0sxSm13dmJvU21ielR1NWoxc2pvCjRhOWpnaDlhdG1kbk1oWGU3OE5W
-            TU12NU54Lzh3SEw2SlR1VmozaFNVQlUKLS0tIGF2Y0lIRnZkYUJHNnZPSXhOZVpW
-            MVJyTE14S2N1ZXQzRzR3NDN3SFpONmMKiiowzaLEZ+0ZHjVdodcevnfjXRJJn4m0
-            rW729dtDAsFiseQ+m6c1MKNR47D+0gVGgpAneZv9hkBFQHBbxC5N5A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGMlRzK0EvaExhcWRPVCtN
+            WUZBUWF3YTkzK3ZadlhOVEZjb3UremxUSTBJCk5uK25RZ2xxOVFLMnRJdThQWnlj
+            dFdKdGIrOGZYQzBGOUdneGhYNWZHVUkKLS0tIG9RSVVwTHcrNlA1Zm9ZNVZZQ3pU
+            L3RDK3UrMlpFRkl3ZmpsRkc2bS8zNmcKVlF9xTzWIjumZO0Gs1vghaYCMpDg6RiN
+            BLoqv1NFazEMjB+kRbvn/4PbJv+nR5EtWp221MiHlWdDFm6+fBy1pA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T11:21:51Z"
-    mac: ENC[AES256_GCM,data:7uWDzhEVIT/WOOX5arEyAsFtOG72npkszyAdHzWeyseoK0qgAvufiVvY4wEEMCfuNALvBjVB6/u/5mbwhrrVjff9UEWk1et/a+u+nt3hzdu8O/gKMBECqgu60a+DgYdbzGw8MtHJGwW4sHiYntHiW3WyWgOAeA2WQMq2NmxQWAI=,iv:pbgWpqTCqKle4oBTAWI2ONs+bWiL6g2+6GS1zmhjX+E=,tag:26Fc7gGzi+QPWcv7nWyYWA==,type:str]
+    lastmodified: "2022-12-24T12:32:48Z"
+    mac: ENC[AES256_GCM,data:jRq+Dkfl/e706HVhC61dQtIguLYyNtUt7Uk+dMfxfFH1X77wHygddGttbY9JDiAFXh4jBqQdyq+Tb1UtMJE+owQ5pt6eAYjG0KgYyNoPPoTeqRQgjbsjYN64LiOhbUnByiHFJPRNY1ddpXw7oNwvjXxpw28imrYLNpEysJ9LIXo=,iv:C39nUVTcFBVowqEqfx39v1Ab3XScoaCc3QDule2smPc=,tag:wMEXG3IwsJLqYTHcAezzpg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
