--- a/kubernetes/apps/longhorn-system/longhorn/app/secret.sops.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/secret.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: longhorn-backup-secrets
     namespace: longhorn-system
 stringData:
-    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:9hugWL+5JQ9XX/T7tJB9BIvROxA=,iv:VxiipVLKU22Am+6dN4EQXe+y4LZESBnvLGRVeh1LmYU=,tag:NBWR4ZzlYxO5ci6IxFh5Xg==,type:str]
-    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:blNtO1GhpN8XcHzGjsSWCbE7HfwvDWfjroFBImdM/2mc+H080Wwma5Tgdg==,iv:YZ7CRplimk5LgWb3RzRow0JNTdaIR/XqZGnRdQUNETo=,tag:2QZS2QeE06zmMd1/B12Pqg==,type:str]
-    AWS_ENDPOINTS: ENC[AES256_GCM,data:lXLg1hk6AGisnV4E8sY1gipvA5PuA3w9fGb3AHW1aOhxXYE=,iv:lRe+Fm6/j23cjgL742ci1i9bJExi4UmbbOgebDmE0b4=,tag:ZMPwQ0u3B0LfCk6kifCV2w==,type:str]
-    AWS_REGION: ENC[AES256_GCM,data:cvjvFw==,iv:63jSf0asWHE+4WWMJjiaZJeVs1h37+XUe+SJC1+pV2U=,tag:dYxvgDCJr3vniDr1zEDOQg==,type:str]
+    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:TVEEC5FZvXRFzOFa6p3gCZJ7Pvk=,iv:bZBuKjUVLmC43IfJrI3WSTqH+YEHFqinZug/0egp71E=,tag:JCLZJewjcQVHhTjUqUSg8g==,type:str]
+    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:dvR5qiTclL8cPOajHui++Ly/Yh2mqz+YsL9gxKjo0o7kfoJlmxo+Iey2vw==,iv:+AD69ywyFw7RvOTulxSqvcrXN9TnkehZM3dM3oSlgiM=,tag:0P7/TYzrkP35hNPXgs7QpA==,type:str]
+    AWS_ENDPOINTS: ENC[AES256_GCM,data:InsOeUb/GJM0YpjIbAXzhRVd8n7/Dzthug4Ii2qRu94ehUY=,iv:Ud8hRjH9+Tn+ptY5WU+TFC69Rfk3Or75pGqR5dT5/as=,tag:ricJyypc6VkVt1BQsbpY4Q==,type:str]
+    AWS_REGION: ENC[AES256_GCM,data:p3HFMQ==,iv:mgeIp8fZYB+g94PQ1iZaEFldVbwDFbYI5/FJqrlmvH4=,tag:JNS3hSK4YDgoVMcrvrg24Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHYkxZTlBpRTRuMXdJaVJi
-            RmdrMGRLQmx3aHFsd1NtNXlDbG5YQXlBUUEwCmEyeU1vV1F2ak56clJ2dlZzVEdB
-            ajlDSjQ2UEY4V1NTQUUxaXVIaWxaSVkKLS0tIGpsNzhRditBbkl6L1VBNFQxOTVa
-            bWd1K3AyNFhuSlhBUG1aeGlySmFxaEUKb3EE6P8pkGELvqSDMd+SKMI1PnvwJ7dU
-            2H+aLJ3I59eBn20bqviGGA8cYz3VRi4zZaiLXoUswkakF1O8EQ2/RQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDZU42MmRWdHJybk1jQmxw
+            MlpETktxZkhtZmtaejJkem1vb0F4Y1Z6RXhvCkJRYUNUd3RabGZLMnNGU3NJUkdM
+            Y29kU3RZSzZ5RVpzQ2RlcHBwelptaFEKLS0tIG1NVndQR2tRTTVMZjc4TklYdHpX
+            bzRwdUY1Yk9KODBCSUhZV2tyaFZuWDAK4gCyEbGGjfxp6AstZNp4DhkB6TaPS2GL
+            0X19r3SCKPGgwEvyORNmrwixnV6km0NXEOy/d4aDPyNlNm4dxuuKtw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T11:21:51Z"
-    mac: ENC[AES256_GCM,data:rqsV8vHR1fQLRBPoO9bZQ6qu0MA1v4VrMYG3qE2oXCCeiNxNBFfsEJuSAyKAZIZxGu64WIoTkhGx4L0a5CupTJzpKZhYLElrKhJp5nQXkxOpsqe54PUWw2cE5vYPJVCAFl0BQQ5M3kURngPzav8EjorAEXKgOPjYpPUkmly9mbk=,iv:tJWvJ3UhgiD/gwT0wALUXXw/sgwK1fOJF6APyOIeU0Y=,tag:2bA+VD2DlnKl08F2lJOaAw==,type:str]
+    lastmodified: "2022-12-24T12:32:48Z"
+    mac: ENC[AES256_GCM,data:8zTAs8rf1T3rAg56bVn74T4QYXAa0kMz0jMawdMg3FfXS+gOLyxmjlMD8ZnlorHsallCG/5YWnK8omSonwphIIhlIeeipFAbCpR0HR8pLMR2vjy0z1H2Or6tLSLbpgIL4YTRaUOobhbVFzw2Lo6VRuLA6UxKwkkJcZ+/OTuOyaY=,iv:pfD/vBebqJRLW/H9LDoWnbihFTOisGNNbkTJooGgtgI=,tag:jnHNIQruLVtElg438ukRng==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
