--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,15 +4,16 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:dt8n6sJMDg==,iv:KJa8T+DpXwKYPT1uYgv20phumKCBjBnICuWYfrSDt0U=,tag:T8uqB3gC9Buru7dMbEotcg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:cGr4H6fRpkX7EEUHNGLQw1WuvnUR0oj41bQ6jF8=,iv:22QCXVQgPq5QE2EuX3SWO76G8pUDdkB5HJD/pnFpCLg=,tag:gE6DugKfrhYadxB6QWD+kg==,type:str]
-    SECRET_ZIGBEE2MQTT_DEVICE: ENC[AES256_GCM,data:DHzKh3rc0li5+5eTwJhGCQp0TZvFeqFMk75wIn8QG5lzohlWuNJ34CPB6LYbFKhWNW5UjJW5PiEm5yYzNHje/VFkV+r4jI04rI+hQI9NOOaAAESvI5dQ,iv:58+FmMGQPhyM0WIH542/cCLtIugh4HE1jvSM9Q/PDFk=,tag:DLdnHzQy3CT/63ztjSRR4Q==,type:str]
-    SECRET_VELERO_BUCKET_REGION: ENC[AES256_GCM,data:zJcGcA==,iv:rvtZh+weeEVDFQVHZglHfCZkJphR9lMVXkFQtEAC//A=,tag:enkBk2jUtq5DkY8wo5G4AA==,type:str]
-    SECRET_VELERO_BUCKET_ENDPOINT: ENC[AES256_GCM,data:H5cLWeZoZlKkdx55xI3c6XrIDKDH7WF5AKeGyzXi5Yv9z04=,iv:V+jv6CsAuQllr3n8sVTwdBwlP1dFrgXZALuUbx8k2zA=,tag:d2YPw65KsnOZ1gYCWKDPVQ==,type:str]
-    SECRET_VELERO_BUCKET_NAME: ENC[AES256_GCM,data:+GwUVoSZtpiLvMGpqpQUXQ==,iv:6PlGrzZlX6l/vbXivBMpIW88eb3sH0tOa+9SUm8WFZM=,tag:Im+LgAY1lEfPo+wnxRVtDg==,type:str]
-    SECRET_LONGHORN_BACKUP_TARGET: ENC[AES256_GCM,data:4KefjOd4b6nSlWXh58FaT6FQyjqQ8R1gIg==,iv:FOqUfSG6VFI3U1C6yVsRfWkHFMsLgCisi9NLa7Y4uQk=,tag:JFkZoWeJfYEEgzQlIHaLFw==,type:str]
-    SECRET_CLUSTER_CD_TUNNEL_ID: ENC[AES256_GCM,data:4J6oo37RtWbTUhyAASqhCPxMonheHr3/rHUyv3nx1FQkVK+D,iv:8o8lckkgdw6ohdo/jYu84/mcCURLwXeaLxoO0ZtLDsI=,tag:4Axmj9JAQTZq6w9/5LWxYw==,type:str]
-    SECRET_CLUSTER_SELECTOR: ENC[AES256_GCM,data:cuKsvGnQ8rwrCvijDli1NkRkhpijDzMjUM1siZ4=,iv:bianNMJHnZ6VCUAPF9TQyNw4N6cVjsHB/BF5WjxxqEs=,tag:m6G+smPi8UoAbeKz+k705Q==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:HK05JY7lXA==,iv:EJYi4771SukrDm/bvYuE7MWnrY8eFasMlhZdVtUPnXM=,tag:gBLIdl/9h1y5MKJzR11dCA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:O06syzygoqoIEww06+RRbnFaoAHKuVWGeBYgjZI=,iv:SEPcD+h2pUbO3qvz6HVnGWcuoGsO0JMtDZZo2MHj95k=,tag:m6BLLLx5j3EDbvJ+MkOvxw==,type:str]
+    SECRET_ZIGBEE2MQTT_DEVICE: ENC[AES256_GCM,data:C+PeC19LZsBKdhpyWNI5H9qYXZfMDdVvddhLWa374hfqfkDEAAH7oitiRWT3ei/oNphwogNNxcxzveW/gAA03Z1SSy4pEpF8WvXqlvHqo+M9vQBqRSoy,iv:3rPol7kzlYdW0gJiaRXBfWvEsQ4G897GAxDKGIgmb4w=,tag:QReBtRPj+tnwAL7rjTP5nQ==,type:str]
+    SECRET_VELERO_BUCKET_REGION: ENC[AES256_GCM,data:/moVtA==,iv:8i8OlKnj2IHijGUMzuM42LZvOaa/h5wWdaif87mdNWo=,tag:g5Wzu63iPSZ2zkP8R7vdSw==,type:str]
+    SECRET_VELERO_BUCKET_ENDPOINT: ENC[AES256_GCM,data:CAhsHHV3DQlleErCTFTjN0Uxs5u4+doOGLS1AY28PVycX8Y=,iv:xbd0SLM2ztgaXQqo8C3NrXTYGSdyN1c9nnnbrtZJT3Y=,tag:cJmiJA5e2bG0eR46kCIwtg==,type:str]
+    SECRET_VELERO_BUCKET_NAME: ENC[AES256_GCM,data:5g1KK60T/NfWBQ/j95tu/w==,iv:MLcPeW/OSqU3T+kFp/z/087kqtsKyxHFtMavMeJ+hnI=,tag:Q6goGRhQvbDFwy3e1+prng==,type:str]
+    SECRET_LONGHORN_BACKUP_TARGET: ENC[AES256_GCM,data:OopFqrlh6v1MhcpXK3YCg2oZoCEcXXME4Q==,iv:0BTd5tiNy95WcZHyYjxc87uS2HTLAZgw9+oqIPsE59M=,tag:GUv94jYAFKGEPVVEAUXzGw==,type:str]
+    SECRET_CLUSTER_CD_TUNNEL_ID: ENC[AES256_GCM,data:QDyoTV8pJKgtbkwVG9sRCPnay9PXKZ4uqcvNo8r3R5WuJWOB,iv:7bU24dWLNJ2Gq9rUClHH2vONtYKzNHgKIkP79wqFdX0=,tag:thBM4MVxRldaJOfBLlLmtg==,type:str]
+    SECRET_CLUSTER_SELECTOR: ENC[AES256_GCM,data:WRy+cWg2XV/Cw/RiLf6eZcjvvYmMjVpooXlBXyU=,iv:eVMAynrx36VqF1+IceXg8QN5lUi8pNug0gIQG1mGYF0=,tag:I7AMP45yMJ2VTLX9heI0dQ==,type:str]
+    SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:t9ZDEMteNKk6,iv:wsr+hJ5TSe2knMeqlestd+UojM61GjDaZiuHSpACNh8=,tag:c6P4CZw0LhmzHFzzpjT3OQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,14 +23,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvOFR6Smw1bm1kNHpKeFZW
-            bFJ5TzNwcCtwQnNrN0RFeHF5OHNKdU5SbmhrCkJWelRHcHd2SFJjSElsTnZZUE1n
-            NTQ2c2NRempRdEJCOXdCUWhabWJnM2MKLS0tIFJ1c3JaRUVlM3Q5L3puTmtuQXNJ
-            NVNNMGhMTlNnaTZNdHIwMnI4WDZJZmcKzCMYJFhUeE0Rd+LQPMZ/WLHWJW8IRDeX
-            aN21QRr2oYGJW/PfdLDp3EPUGOsoTPB24WczmOr3bw3DtmBFhFPyqw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCTFFhdk5ncmx0UXB5OHVi
+            SmpKeElpakNLYUE5bDZ1bG5KbmpIcG5mYUZVCkxJck9QYXVBeVYxd2lPaVRpS2cz
+            MFBXZEtWRnlNb3Z0R3lHcTZLRnZWeU0KLS0tIDBIamREbmJVemJ1NjVjcUtJQ3cr
+            dnZldENxWmRUWkVDTDBjbVZvNGIvVW8KG2PeyuuaJbFFKEOOvlhEHHVqptNeWHbp
+            e415M0bmodfVqoUA7fgHKFM03IJpm0tIgbIk4LHgV/amxhpRaEVfpA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T11:21:51Z"
-    mac: ENC[AES256_GCM,data:9XCwM2LEFTs8jxleqtnrJnB5Ad1nD71PxnksLo3ch24nTLA4Y4Cs9H0NcvJCdz9Bqk9zfyXHZHRdAVOxZ76MUguqALFWNLowFSDiH3GWacTdWK8B58hINiEbQzhfPqv/a8ZRZWM7ap/n9gjbYjEI0YmVWwBKRl4nLCFMPu4VbJY=,iv:Lwx+YDzOGXWsvj35MwjcG9jCZvo7ueC7hBJjIdXuusU=,tag:uBV/VkcZQdBl2UqbpxobMQ==,type:str]
+    lastmodified: "2022-12-24T12:32:48Z"
+    mac: ENC[AES256_GCM,data:sKYMmTrIRMNHbWhhHotzpH9FDZrUihxfm055LF0Q3HhIUT63GQ1W15NVNNGhhX9S8s1MfQK3DXp6cxqflfHNzMl5mNzCjfngwutQ1aVOeud0O1vTV0SPNyGfRJdDt6tN7uMeGZ495cZ1BBMnfx3ZVjbqOyQn7csWJ6FFjLB3iFk=,iv:P0aFmMPCPSxkTgQCekRAQHac8ZAz3sadJeUUYfUmSH4=,tag:Y76FT/PFEtDrfW1hBe3nJw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
