--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -14,3 +14,4 @@ stringData:
   SECRET_LONGHORN_BACKUP_TARGET: "${BOOTSTRAP_SVC_LONGHORN_BACKUP_TARGET}"
   SECRET_CLUSTER_CD_TUNNEL_ID: "${BOOTSTRAP_CLUSTER_CD_TUNNEL_ID}"
   SECRET_CLUSTER_SELECTOR: "${BOOTSTRAP_CLUSTER_SELECTOR}"
+  SECRET_EMQX_ADMIN_PASSWORD: "${BOOTSTRAP_SVC_EMQX_DASHBOARD_PASSWORD}"
