--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:/O+fnwhe,iv:WSqSlS8KQItJae5oXi8kiRURKi8JSlNZIlH0O7bFVMM=,tag:zpuA704BWVqI6vGG+EUMuQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:DDNISw==,iv:rxswMw4IOfvg9F451DluJkJGKbQ1R3JaPE/JYuI458A=,tag:KOCyfBFKxCfVFA8ofgK4DA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:DW3FBvRd,iv:hnmQkTRX2RWyxuU6mHo8SDblpKf7QuUObMa2iJp6HgY=,tag:U9+dCFkYjN7XkUHt5GC29Q==,type:str]
+kind: ENC[AES256_GCM,data:pDzMpAlr,iv:cGEbu9FoOWMHSwO957sS0aZyDQQ5+AogqrJSB/52L+4=,tag:0DsQA5A+XGsPLMiX26gwNw==,type:str]
+ansible_user: ENC[AES256_GCM,data:U/3ffg==,iv:Qj47lvwcSZdzpV1CADz4Aibv+cQYRkuu/9DTIGDmsFc=,tag:u188NPaEgOTGrSmxRQ3Tzw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:D3iYbfTP,iv:M6Y0ZHCwzpv6MYHOslpSTvrM5jjHGTIo+V8ch/4Ptro=,tag:clNMur/xV3Qqm8/sAdVSOw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5SFZURjkwaklRU3N5ZUlo
-            ZUJXb2k1a2x5c1JJKy82blRsVGhTRXN1UHhVCnZ0aUpGYXN2cXR0M1luTDNNT3gv
-            QmtqMTQ5THpKWGpoT2lBY2ZNajNDTVEKLS0tIG4xRlhJa0xxUUU2aElmcERzelJD
-            SVk5djRmbzhmVUJqQThmRFdnOUY0RFUKGQGeb/wFJxj1hdSTvq50U6AoHjgzKxLa
-            Xlyy/1fSTfRBtAQ10qpdlPxp7hclU6Gn6qRq5rAVzNqAhtTWRD6l1Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaMTNEcVVxT3hDMmptaGtp
+            dk1GMjZ1UWp6RFg4QXRSM2p5RjF6REtON3lvCjY0czFwTm42VHJCSVFuMlJ3UFgx
+            VkZwSWlBM3crM2dyVGZmc0pyb2FmRE0KLS0tIGV0QS91TCt1dlllQXRxUXNxTk9C
+            dnQxTXZpU1Iwb1orQ2o0Vks5RS9tWEUK6HPssuWMbBGCYnUeulhXjMmMfiO0zG58
+            V7jztCmxkxVwvwkxsbwrOSUBPN0w+cFNRsClKQXpYNmBj6QyHMwVEg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T11:21:51Z"
-    mac: ENC[AES256_GCM,data:fuDbx8WGIUsCvM4gOlorCPj0Srel+iKY0buVh8CNGyjrDkd3THhCT02teDQk9/dia9AmLf94kKZiEqZGcjB/K8Ft/1H93bNQr14jOLPVswkw01hkIWXjlZrC/dK1H0F6oqtMxbXK5+BAJaFTnzmTSZVe/TjwV7c4ZCvT3TtP9p8=,iv:zIcBpXGeaR2WUjc02HvQrj+aTcMQd+FrsJaEJQY8BCA=,tag:9OnZtkiquqUchwjooX/8vQ==,type:str]
+    lastmodified: "2022-12-24T12:32:48Z"
+    mac: ENC[AES256_GCM,data:4l2TP79oHiEqPY+TaVHlOueHGorjPjSKHLqU5DMHITJB2OR9v8VzYrqGUwySbWEBIGrf8ffxtRRVl+U92Gzh63RTe/83/umQZD57YXSq2y1hG1vL1H+3Rzl+ixbaEB1Ss1Mlueocd6h91+WYn2U3v51EU4bOtxUKl4A5dW5iEyY=,iv:13xfp+5S+knsTM9bYzhKHvY78kZm/Hj2hm5P56/olEg=,tag:FGfA7xsAtdchZSpKNfI3Qw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
