--- a/kubernetes/apps/home/emqx/ks.yaml
+++ b/kubernetes/apps/home/emqx/ks.yaml
@@ -23,3 +23,27 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-emqx-core
+  namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
+spec:
+  dependsOn:
+    - name: cluster-apps-emqx
+  path: ./kubernetes/apps/home/emqx/cluster
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  healthChecks:
+    - apiVersion: apps.emqx.io/v2alpha1
+      kind: EMQX
+      name: emqx
+      namespace: home
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
